# my-projects

./: salat_name  test.cpp  test.py
c/learning/: main.cpp  noice
haskell/: @  test  test.hi  test.hs
julia/learning/: Manifest.toml  Project.toml
julia/learning/src/: learning.jl
julia/testings/: Manifest.toml  Project.toml
julia/testings/src/: testings.jl
nix/: test.nix
python/data-science/: main.py  test.csv  test.lua
python/hand-recognition/: main.py  test.py
rust/Machina-Learning/: Cargo.toml
rust/Machina-Learning/src/: main.rs
rust/arduino-projects/http-server-arduino-companion/: Cargo.toml
rust/arduino-projects/light/: Cargo.toml
rust/arduino-projects/light-sensor/: Cargo.toml
rust/csv-example-reader/: Cargo.toml  test.csv
rust/csv-example-reader/src/: main.rs
rust/http-server-arduino/src/: main.rs
rust/hx-test/: Cargo.toml
rust/hx-test/src/: main.rs
rust/hyprland-thingy/: Cargo.toml
rust/hyprland-thingy/src/: main.rs
rust/idomatic-rust/: Cargo.toml
rust/lenovo-gui/: Cargo.toml
rust/lenovo-gui/src/: main.rs
rust/linear-algebra-lib/: Cargo.toml
rust/lowlevel-gui-egui/: Cargo.toml
rust/maths/: quadratic_solver.rs
rust/multi-threading/: Cargo.toml  perf.data  perf.data.old
rust/physics-project/: Cargo.toml
rust/plotting-functions/: Cargo.toml  build.sh
rust/serial-stuff/: Cargo.toml
rust/simple-markdown/: Cargo.toml
rust/simple-web-scraper/: Cargo.toml
rust/sway-testing-with-ipc/: Cargo.toml
rust/testing-logic/: Cargo.toml
rust/too-many-linked-lists/: Cargo.toml
rust/vulkan-triangle/: Cargo.toml
(+27 files in other folders)
