[package]
name = "lenovo-gui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.18.0"
tokio = { version = "1.19.2" , features = ["full"]}
futures = "0.3.23"
tracing = "0.1.36"
tracing-subscriber = "0.3.15"
nix = "0.25.0"
thiserror = "1"
